# SELConnect

./: README.md  generated.rdb  generated_template.txt  pyproject.toml  relay_settings.csv  run.txt  test_results.txt
out_relays/Relay01/: Relay01.scl.xml  Relay01_template.txt
out_relays/Relay02/: Relay02.scl.xml  Relay02_template.txt
out_relays/Relay03/: Relay03.scl.xml  Relay03_template.txt
out_relays/Relay04/: Relay04.scl.xml  Relay04_template.txt
out_relays/Relay05/: Relay05.scl.xml  Relay05_template.txt
out_relays/Relay06/: Relay06.scl.xml  Relay06_template.txt
out_relays/Relay07/: Relay07.scl.xml  Relay07_template.txt
out_relays/Relay08/: Relay08.scl.xml  Relay08_template.txt
out_relays/Relay09/: Relay09.scl.xml  Relay09_template.txt
out_relays/Relay10/: Relay10.scl.xml  Relay10_template.txt
out_relays/Relay_1/: Relay_1.scl.xml  Relay_1_template.txt
out_relays/Relay_10/: Relay_10.scl.xml  Relay_10_template.txt
out_relays/Relay_11/: Relay_11.scl.xml  Relay_11_template.txt
out_relays/Relay_12/: Relay_12.scl.xml  Relay_12_template.txt
out_relays/Relay_13/: Relay_13.scl.xml  Relay_13_template.txt
out_relays/Relay_14/: Relay_14.scl.xml  Relay_14_template.txt
out_relays/Relay_15/: Relay_15.scl.xml  Relay_15_template.txt
samples/: Master.csv  config_input.csv  mapping_710.json  sample_710.rdb
selprotopy/: cli.py  csv_report.py  enhanced_rdb_generator.py  extractor.py  multi_generator.py  rdb_generator.py  rdb_parser.py  template_generator.py
tests/: rdb.py  test_csv_report.py  test_extractor.py  test_rdb_generator.py  test_rdb_parser.py
(+86 files in other folders)
