[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selprotopy-raas"
version = "0.1.0"
description = "Relay Automation & Analysis Suite – Problem C CSV Export"
authors = [{name="You", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
selprotopy-extract = "selprotopy.cli:main"
