[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SEL_Connect"
version = "0.1.0"
description = "Relay Automation & Analysis Suite – Problem C CSV Export"
authors = [{name="AOUF Nihed", email="aouf_nihed@esgee-oran.dz"}]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
selprotopy-extract = "selprotopy.cli:main"
